--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
 </head>
 <body>
 	<div id="app"></div>
-<script type="text/javascript" src="./dist/vue-mint-scroll.js"></script></body>
+<script type="text/javascript" src="./dist/vue-table-export.js"></script></body>
 </html>
